Note Tool Improved and Converter Tool Added.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,13 @@ sqlalchemy
 psycopg2-binary
 jinja2
 python-multipart
+Pillow
+moviepy
+mammoth
+weasyprint
 passlib[bcrypt]
 bcrypt==4.0.1
 python-jose[cryptography]
+Pillow
+pdf2docx
+opencv-python-headless
